# ErrorServer

./: Cargo.toml  Dockerfile  LICENSE  README.md  error.html
.github/workflows/: build.yml
src/: http_codes.rs  main.rs  signals.rs  threads.rs
